<resources>
    <string name="app_name">Kabar Berita</string>
    <string name="Kabar_Berita">Mud Newsssssss</string>
    <string name="Judul_Berita1">"Jokowi Terima "</string>
    <string name="Judul_berita11">Kunjungan Istri Anwar</string>
    <string name="Judul_Berita111">Ibrahim di Istana Bogor</string>
    <string name="Selengkapnya">Selengkapnya</string>
    <string name="Judul1">Jokowi Terima Kunjungan Istri Anwar Ibrahim di Istana Bogor</string>
    <string name="Berita1">Jakarta - Presiden Joko Widodo (Jokowi) menerima kunjungan Deputi Perdana Menteri Malaysia, Wan Azizah Wan Ismail. Pertemuan keduanya berlangsung di Istana Kepresienan Bogor.  Azizah beserta rombongan tiba di Istana Bogor, Selasa (9/10/2018) sekitar pukul 10.00 WIB. Istri Anwar Ibrahim itu langsung memasuki ruangan di Istana.</string>
    <string name="Berita11">"Sementara Jokowi didampingi Menteri Luar Negeri, Retno Lestari Priansari Marsudi, Mensesneg Pratikno, dan Mendikbud Muhadjir Effendy. Dalam pertemuan, Jokowi mengucapkan terima kasih atas bantuan Malaysia untuk gempa di Lombok dan Sulawesi Tengah.Soal bantuan, sebelumnya Perdana Menteri Malaysia, Mahathir Mohamad mengatakan, Badan Nasional Penanggulangan Bencana Malaysia (NADMA) telah berkoordinasi dengan badan-badan terkait dan siap mengerahkan tim pencari dan penyelamat (SAR) serta bantuan kemanusiaan untuk Indonesia.  Mahathir juga menyaksikan penyerahan bantuan kemanusiaan sebesar 1 juta Ringgit (Rp 3,6 miliar) untuk Yayasan Kemanusiaan Sulawesi. "</string>
    <string name="Judul_Berita2">Pemprov DKI Pasang 500 \'KTP\' ke Anjing Peliharaan</string>
    <string name="Berita2">Jakarta - Pemprov DKI memasang microchip untuk anjing peliharaan dan anjing yang diperjualbelikan. Selain itu, anjing-anjing itu akan mendapatkan identitas atau \'KTP\' sesuai dengan microchip yang dipasangkan.  \"Sampai saat ini microchip terpasang 314 dari target 500 unit,\" kata Kepala Dinas Kelautan, Perikanan, dan Ketahanan Pangan (KPKP) DKI Darjamuni saat dimintai konfirmasi, Selasa (9/10/2018).  Dia menyebut pemasangan tanda identitas itu sesuai dengan Pergub DKI Nomor 199 Tahun 2016 tentang Petunjuk Pelaksanaan Pengawasan Hewan Rentan Rabies serta Pencegahan dan Penanggulangan Rabies. Sementara itu, Kepala Bidang Peternakan dan Kesehatan Hewan Dinas ( KPKP) DKI Jakarta Sri Hartati mengaku sudah melakukan sosialisasi selama setahun pada 2017 dan dilanjut tahun ini dengan pelaksanaan.</string>
    <string name="BeritaTiga">Masih Tinggi, Dolar AS Pagi Ini Rp 15.230</string>
    <string name="berita3">"Jakarta - Tekanan nilai tukar dolar Amerika Serikat (AS) terhadap rupiah pada pagi ini sedikit mereda. Kurs dolar AS pagi ini berada di Rp 15.230. Kemarin dolar AS nyaris Rp 15.300  Demikian dikutip dari data perdagangan Reuters, Selasa (9/10/2018). Dolar AS pada hari ini bergerak dari level Rp 15.213 hingga 15.246.  Jika ditarik dalam satu minggu ke belakang, rupiah tercatat sudah mengalami pelemahan hingga 1,72%. Tak cuma dolar AS, dolar Singapura juga terus menguat terhadap rupiah.Faktor eksternal masih dinilai menjadi pengaruh kuat rupiah terus tertekan. Kepala Pusat Studi Ekonomi dan Kebijakan Publik UGM Tony Prasetiantono menilai bahwa ekonomi Indonesia saat ini tengah tertekan ketidakpastian global.  Tekanan yang dimaksud, kata Tony terlihat dari nilai rupiah terhadap dolar AS yang terus melemah. Pelemah kurs rupiah juga dipicu defisit transaksi perdagangan dan transaksi berjalan. "</string>
    <string name="tgl3">Selasa, 09 Okt 2018 10:40 WIB</string>
    <string name="tg1">Selasa, 09 Okt 2018 10:00 WIB</string>
    <string name="tgl2">Selasa, 09 Jul 2018 09:40 WIB</string>
</resources>
